--- a/apps/autobrr/config.json
+++ b/apps/autobrr/config.json
@@ -2,14 +2,12 @@
   "$schema": "../schema.json",
   "name": "autobrr",
   "port": 8158,
-  "available": true,
+  "available": false,
   "exposable": true,
   "id": "autobrr",
   "tipi_version": 11,
   "version": "1.31.0",
-  "categories": [
-    "media"
-  ],
+  "categories": ["media"],
   "description": "autobrr is the modern download automation tool for torrents. With inspiration and ideas from tools like trackarr, autodl-irssi and flexget we built one tool that can do it all, and then some.",
   "short_desc": "Automation for downloads.",
   "author": "autobrr",
