--- a/apps/librephotos/config.json
+++ b/apps/librephotos/config.json
@@ -2,18 +2,13 @@
   "$schema": "../schema.json",
   "name": "LibrePhotos",
   "port": 8132,
-  "available": true,
+  "available": false,
   "exposable": true,
   "id": "librephotos",
   "tipi_version": 12,
   "version": "2023w37p2",
-  "supported_architectures": [
-    "amd64",
-    "arm64"
-  ],
-  "categories": [
-    "photography"
-  ],
+  "supported_architectures": ["amd64", "arm64"],
+  "categories": ["photography"],
   "description": "Complete photo management service",
   "short_desc": "Complete photo management service",
   "author": "Niaz Faridani-Rad",
