--- a/apps/photoprism/config.json
+++ b/apps/photoprism/config.json
@@ -2,14 +2,12 @@
   "$schema": "../schema.json",
   "name": "PhotoPrism",
   "port": 8110,
-  "available": true,
+  "available": false,
   "exposable": true,
   "id": "photoprism",
   "tipi_version": 3,
   "version": "latest",
-  "categories": [
-    "photography"
-  ],
+  "categories": ["photography"],
   "description": "PhotoPrism® is an AI-Powered Photos App for the Decentralized Web. It makes use of the latest technologies to tag and find pictures automatically without getting in your way. You can run it at home, on a private server, or in the cloud. Default username: admin",
   "short_desc": "AI-Powered Photos App for the Decentralized Web. We are on a mission to protect your freedom and privacy.",
   "author": "PhotoPrism",
