--- a/apps/portainer/config.json
+++ b/apps/portainer/config.json
@@ -2,15 +2,13 @@
   "$schema": "../schema.json",
   "name": "Portainer",
   "port": 9443,
-  "available": true,
+  "available": false,
   "exposable": true,
   "https": true,
   "id": "portainer",
   "tipi_version": 14,
   "version": "2.19.1-alpine",
-  "categories": [
-    "utilities"
-  ],
+  "categories": ["utilities"],
   "description": "",
   "short_desc": "Making Docker and Kubernetes management easy.",
   "author": "portainer.io",
