--- a/apps/qbittorrent/config.json
+++ b/apps/qbittorrent/config.json
@@ -1,15 +1,13 @@
 {
   "$schema": "../schema.json",
   "name": "qBittorrent",
-  "available": true,
+  "available": false,
   "exposable": true,
   "port": 8133,
   "id": "qbittorrent",
   "tipi_version": 8,
   "version": "4.5.5",
-  "categories": [
-    "utilities"
-  ],
+  "categories": ["utilities"],
   "description": "qBittorrent is a fast, easy, and free BitTorrent client.",
   "short_desc": "Fast, easy, and free BitTorrent client",
   "author": "qBittorrent project",
