--- a/apps/syncthing/config.json
+++ b/apps/syncthing/config.json
@@ -1,16 +1,13 @@
 {
   "$schema": "../schema.json",
   "name": "Syncthing",
-  "available": true,
+  "available": false,
   "exposable": true,
   "port": 8090,
   "id": "syncthing",
   "tipi_version": 8,
   "version": "1.25",
-  "categories": [
-    "data",
-    "utilities"
-  ],
+  "categories": ["data", "utilities"],
   "description": "Syncthing is a continuous file synchronization program. It synchronizes files between two or more computers. We strive to fulfill the goals below. The goals are listed in order of importance, the most important one being the first. This is the summary version of the goal list - for more commentary, see the full Goals document.",
   "short_desc": "Peer-to-peer file synchronization between your devices",
   "author": "The Syncthing Foundation",
