--- a/apps/tailscale/config.json
+++ b/apps/tailscale/config.json
@@ -1,15 +1,12 @@
 {
   "$schema": "../schema.json",
   "name": "Tailscale",
-  "available": true,
+  "available": false,
   "port": 8093,
   "id": "tailscale",
   "tipi_version": 15,
   "version": "1.50.1",
-  "categories": [
-    "network",
-    "security"
-  ],
+  "categories": ["network", "security"],
   "description": "Zero config VPN. Installs on any device in minutes, manages firewall rules for you, and works from anywhere.",
   "short_desc": "The easiest, most secure way to use WireGuard and 2FA.",
   "author": "© Tailscale Inc.",
