--- a/apps/transmission/config.json
+++ b/apps/transmission/config.json
@@ -1,20 +1,16 @@
 {
   "$schema": "../schema.json",
   "name": "Transmission",
-  "available": true,
+  "available": false,
   "exposable": true,
   "port": 8089,
   "requirements": {
-    "ports": [
-      51413
-    ]
+    "ports": [51413]
   },
   "id": "transmission",
   "tipi_version": 8,
   "version": "4.0.4",
-  "categories": [
-    "utilities"
-  ],
+  "categories": ["utilities"],
   "description": "Transmission is a fast, easy, and free BitTorrent client.",
   "short_desc": "Fast, easy, and free BitTorrent client",
   "author": "Transmission Project",
