--- a/apps/wg-easy/config.json
+++ b/apps/wg-easy/config.json
@@ -1,20 +1,16 @@
 {
   "$schema": "../schema.json",
   "name": "Wireguard",
-  "available": true,
+  "available": false,
   "exposable": true,
   "port": 8082,
   "requirements": {
-    "ports": [
-      51820
-    ]
+    "ports": [51820]
   },
   "id": "wg-easy",
   "tipi_version": 5,
   "version": "7",
-  "categories": [
-    "network"
-  ],
+  "categories": ["network"],
   "description": "Access your homeserver from anywhere even on your mobile device. Wireguard-easy is a simple tool to configure and manage Wireguard VPN servers. It is written in Go and uses the official Wireguard client. You have to open and redirect port 51820 to your homeserver in order to connect.",
   "short_desc": "VPN server for your homeserver",
   "author": "WeeJeWel",
