--- a/apps/windows/docker-compose.yml
+++ b/apps/windows/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ${APP_DATA_DIR}/data/storage:/storage
     networks:
       - tipi_main_network
+    sysctls:
+      - net.ipv4.ip_forward=1
     labels:
       # Main
       traefik.enable: true
